# dt

./: .gitignore  Dockerfile  README.md  __init__.py  config.py  get_no_test_urls.py  login.py  main.py  ocr_test.py  pyproject.toml  requirements.txt  secrets.local.env  start.cmd  start.py  start.sh  storage_state.json  url.txt  urls.txt  watch.py  已看  看视频.py
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
crawler/: get_no_test_urls.py  login.py  main.py  watch.py  watch_videos.py  watch_videos_vtech_with_progress.py  watch_videos_with_progress.py
data/: .gitkeep
